added reduced motion

--- a/index.html
+++ b/index.html
@@ -103,22 +103,31 @@
         <section class="container">
             <details class="box" name="homepageDetails">
                 <summary>
-                    <h2>Meesterproef</h2>
+                    <h2>Mijn leerdoelen</h2>
                 </summary>
 
-                <h3>Mijn leerdoelen</h3>
                 <ul>
                     <li>Meerdere manieren bedenken om een iets op te lossen</li>
                     <li>Vaker feedback vragen aan klasgenoten & docenten</li>
                     <li>Optijd documenteren om te zorgen dat het up- to date blijft</li>
                 </ul>
+            </details>
+        </section>
+
+        <section class="container">
+            <details class="box" name="homepageDetails">
+                <summary>
+                    <h2>Meesterproef</h2>
+                </summary>
 
                 <h3>GitHub</h3>
                 <p>
                 <ul>
-                    <li><a href="https://github.com/tymoNL/Meesterproef_liquid" target="_blank">Liquid repository</a>
+                    <li>
+                        <a href="https://github.com/tymoNL/Meesterproef_liquid" target="_blank">Liquid repository</a>
                     </li>
-                    <li><a href="https://github.com/tymoNL/Oost-west_thuis_best" target="_blank">Oude HTML
+                    <li>
+                        <a href="https://github.com/tymoNL/Oost-west_thuis_best" target="_blank">Oude HTML
                             repository</a>
                     </li>
                 </ul>
@@ -200,7 +209,6 @@
                     <li>Hidde de Vries</li>
                     <li>Bruce Lawson</li>
                 </ul>
-
             </details>
         </section>
 
@@ -270,6 +278,14 @@
                     ik de spreker over de printers wat minder interessant. De software die hij had geschreven gebruikt
                     de kapper die ik heb ook dus dat vond ik wel leuk om te zien.
                 </p>
+            </details>
+        </section>
+
+        <section class="container">
+            <details class="box" name="homepageDetails">
+                <summary>
+                    <h2>Mijn vakken</h2>
+                </summary>
 
                 <h4>De highlights van elk vak</h4>
 
@@ -284,6 +300,12 @@
                     volledig eigen invulling die we eraan konden geven.
                 </p>
 
+                <p>
+                    <a href="https://tymonl.github.io/WAFS/" target="_blank">Het project</a>
+                </p>
+
+                <hr />
+
                 <h5>CSS</h5>
                 <p>
                     Bij CSS hebben we geleerd hoe we CSS kunnen gebruiken om onze webapplicaties er beter uit te laten
@@ -292,8 +314,15 @@
                 </p>
 
                 <p>
-                    Het leukste aan css vond ik de nieuwe manieren om elementen aan te roepen en hoe we deze konden gebruiken zonder javascript.
+                    Het leukste aan css vond ik de nieuwe manieren om elementen aan te roepen en hoe we deze konden
+                    gebruiken zonder javascript.
                 </p>
+
+                <p>
+                    <a href="https://tymonl.github.io/CSS-eind-opdracht/index.html" target="_blank">Het project</a>
+                </p>
+
+                <hr />
 
                 <h5>BT</h5>
                 <p>
@@ -307,6 +336,12 @@
                     interessante ervaring omdat het me liet zien wat er allemaal mogelijk is met CSS en hoe
                     belangrijk het is om te testen op verschillende apparaten.
                 </p>
+
+                <p>
+                    <a href="https://tymonl.github.io/erf_formulier/" target="_blank">Het project</a>
+                </p>
+
+                <hr />
 
                 <h5>HCD</h5>
                 <p>
@@ -322,6 +357,12 @@
                     webapplicaties.
                 </p>
 
+                <p>
+                    <a href="https://tymonl.github.io/HCD/" target="_blank">Het project</a>
+                </p>
+
+                <hr />
+
                 <h5>API</h5>
                 <p>
                     Bij API hebben we geleerd hoe je via API's kan communiceren met andere applicaties en hoe je
@@ -334,6 +375,9 @@
                     in onze webapplicaties.
                 </p>
 
+                <p>
+                    <a href="https://api-2425-rpyo.onrender.com/" target="_blank">Het project</a>
+                </p>
             </details>
         </section>
     </main>
@@ -344,6 +388,10 @@
             2025 <a href="https://github.com/tymoNL">Tymo Smids</a> Alle rechten voorbehouden
         </p>
     </footer>
+
+    <button id="toggleAnimationsBtn"><i class="fa-solid fa-head-side-cough"></i></button>
+
+    <div class="animationsInfo">Animations <span id="animationStatus">Enabled</span></div>
 </body>
 
 </html>
