--- a/pages/weekly_nerd-1.html
+++ b/pages/weekly_nerd-1.html
@@ -97,6 +97,15 @@
                     </p>
             </div>
 
+            <div class="detailOpinion">
+                <h3>Mijn mening</h3>
+                <p>
+                    Een aantal van de onderwerpen die besproken zijn, kende ik al wegens mijn opleiding. Andere punten
+                    zoals de :has() selector was ik nog mee onbekend. Ik vond het een interessant onderwerp en leuke
+                    uitleg. Hierom vond ik dit ook een van de betere weekly nerds.
+                </p>
+            </div>
+
             <nav class="nextPrevious"></nav>
         </section>
     </main>
@@ -107,6 +116,10 @@
             2025 <a href="https://github.com/tymoNL">Tymo Smids</a> Alle rechten voorbehouden
         </p>
     </footer>
+
+    <button id="toggleAnimationsBtn"><i class="fa-solid fa-head-side-cough"></i></button>
+
+    <div class="animationsInfo">Animations <span id="animationStatus">Enabled</span></div>
 </body>
 
 </html>
