--- a/pages/weekly_nerd-10.html
+++ b/pages/weekly_nerd-10.html
@@ -35,11 +35,11 @@
     <main class="container">
         <section class="details">
 
-        <nav class="breadcrumbs"></nav>
+            <nav class="breadcrumbs"></nav>
 
-        <div class="detailsImage"></div>
+            <div class="detailsImage"></div>
 
-        <div class="detailHeader"></div>
+            <div class="detailHeader"></div>
 
             <div class="detailsInfo">
                 <h2>Twitter bot</h2>
@@ -63,6 +63,22 @@
                 </p>
             </div>
 
+            <div class="detailOpinion">
+                <h3>Mijn mening</h3>
+                <p>
+                    Ik vond deze weekly nerd het meest interessant omdat we het hele proces hebben doorlopen van het
+                    maken van een Twitter bot en hoe deze werkt.
+                    Het was ook interessant om te zien hoe we verschillende technologieën hebben gebruikt om dit te
+                    realiseren, zoals Puppeteer voor browser automation en n8n voor workflow automation.
+                </p>
+
+                <p>
+                    Wat ik ook interessant vond was het morele aspect van dit project. Mensen specifiek targeten om zo
+                    geld te verdienen is niet echt een goede manier van geld verdienen. maar het is wel een interessante
+                    manier om te zien hoe je met technologieën zoals deze geld kunt verdienen.
+                </p>
+            </div>
+
             <nav class="nextPrevious"></nav>
         </section>
     </main>
@@ -73,6 +89,10 @@
             2025 <a href="https://github.com/tymoNL">Tymo Smids</a> Alle rechten voorbehouden
         </p>
     </footer>
+
+        <button id="toggleAnimationsBtn"><i class="fa-solid fa-head-side-cough"></i></button>
+
+    <div class="animationsInfo">Animations <span id="animationStatus">Enabled</span></div>
 </body>
 
 </html>
