--- a/pages/weekly_nerd-11.html
+++ b/pages/weekly_nerd-11.html
@@ -43,6 +43,22 @@
 
             <div class="detailsInfo"></div>
 
+            <div class="detailOpinion">
+                <h3>Mijn mening</h3>
+                <p>
+                    Ik vind testen het minst leuke onderdeel van programmeren. Het is vaak saai en repetitief werk.
+                    Maar het is wel belangrijk om te doen, omdat het ervoor zorgt dat je code werkt zoals het
+                    bedoeld is. Het is ook belangrijk om te testen of je code veilig is en geen kwetsbaarheden bevat.
+                </p>
+
+                <p>
+                    Omdat deze spreker het eigenlijk alleen over testen had, vond ik het niet zo interessant.
+                    Het was wel interessant om te zien hoe je met verschillende tools kunt testen en hoe je dit
+                    kunt automatiseren.
+                </p>
+
+                </div>
+
             <nav class="nextPrevious"></nav>
         </section>
     </main>
@@ -53,6 +69,10 @@
             2025 <a href="https://github.com/tymoNL">Tymo Smids</a> Alle rechten voorbehouden
         </p>
     </footer>
+
+        <button id="toggleAnimationsBtn"><i class="fa-solid fa-head-side-cough"></i></button>
+
+    <div class="animationsInfo">Animations <span id="animationStatus">Enabled</span></div>
 </body>
 
 </html>
