--- a/pages/weekly_nerd-12.html
+++ b/pages/weekly_nerd-12.html
@@ -42,7 +42,82 @@
             <div class="detailHeader"></div>
 
             <div class="detailsInfo">
+                <p>Digitale toegankelijkheid in de praktijk</p>
+                <p>32% van nederlanders heeft permanente beperking dat zijn meer dan 5.5 miljoen mensen</p>
 
+                <p>Tijdelijke beperkingen</p>
+                <ul>
+                    <li>Oorinfectie</li>
+                    <li>Gebroken arm</li>
+                    <li>Staar</li>
+                    <li>Migraine</li>
+                    <li>Keelontsteking</li>
+                </ul>
+
+                <p>Beperking is een persoonlijke ervaring</p>
+                <p><a href="https://ismy.blue/" target="_blank">Ismy.blue</a></p>
+
+                <ul>
+                    <li>Audits</li>
+                    <li>Consultancy</li>
+                    <li>Project managment</li>
+                    <li>Traning</li>
+                    <li>Toegangkelijk ontwikkelen</li>
+                    <li>Producten toegangkelijk maken</li>
+                    <li>Digitale en fysieke toegangkelijkheid</li>
+                </ul>
+
+                Voor wie geldt de Eea?
+                <ul>
+                    <li>Webshops binnen de eu of levert aan de eu</li>
+                    <li>Zelfbedieningsterminals</li>
+                    <li>Computers besturingssystemen</li>
+                    <li>Bankdiensten</li>
+                    <li>Ebooks</li>
+                    <li>Ehandelsdiensten / webshops</li>
+                    <li>Passagiersvervoer</li>
+                </ul>
+
+
+                Uitzonderingen
+                <ul>
+                    <li>B2B</li>
+                    <li>Bedrijven kleiner dan 10 werknemers</li>
+                    <li>Bedrijven met minder dan 2 miljoen omzet per jaar</li>
+                </ul>
+
+                Kleiner dan 10 maar meer winst dan wel eaa
+                Andersom ook
+
+                Wie kijkt ernaar
+                <ul>
+                    <li>Afm</li>
+                    <li>Autoriteit consument en markt</li>
+                    <li>Commissariaat voor de media</li>
+                    <li>Inspectie justitie en veiligheid</li>
+                    <li>Rijksinspectie digitale infrastructuur</li>
+                </ul>
+
+                <p>
+                    <b>Wat als niet toegankelijk?</b><br />
+                    Eerst melding en daarna boete van 20 miljoen of 10% van de omzet.
+                </p>
+
+            </div>
+
+            <div class="detailOpinion">
+                <h3>Mijn mening</h3>
+                <p>
+                    Deze weekly nerd was erg interessant omdat het over de wetgeving ging van digitale toegankelijkheid.
+                    Hier wou ik meer van weten want dit had direct te maken met het werk dat ik doe.
+                </p>
+
+                <p>
+                    Ik vond het ook fijn dat ik mijn directe vragen kon stellen over de wetgeving en dat deze ook
+                    beantwoord werden.
+                    Het was ook interessant om te zien hoe de wetgeving in elkaar zit en wat de gevolgen zijn als je je
+                    er niet aan houdt.
+                </p>
             </div>
 
             <nav class="nextPrevious"></nav>
@@ -55,6 +130,10 @@
             2025 <a href="https://github.com/tymoNL">Tymo Smids</a> Alle rechten voorbehouden
         </p>
     </footer>
+
+    <button id="toggleAnimationsBtn"><i class="fa-solid fa-head-side-cough"></i></button>
+
+    <div class="animationsInfo">Animations <span id="animationStatus">Enabled</span></div>
 </body>
 
 </html>
