--- a/pages/weekly_nerd-2.html
+++ b/pages/weekly_nerd-2.html
@@ -35,11 +35,11 @@
     <main class="container">
         <section class="details">
 
-        <nav class="breadcrumbs"></nav>
+            <nav class="breadcrumbs"></nav>
 
-        <div class="detailsImage"></div>
+            <div class="detailsImage"></div>
 
-        <div class="detailHeader"></div>
+            <div class="detailHeader"></div>
 
             <div class="detailsInfo">
                 <h3>Info</h3>
@@ -92,6 +92,20 @@
                 </p>
             </div>
 
+            <div class="detailOpinion">
+                <h3>Mijn mening</h3>
+                <p>
+                    Het hele idee van het web is dat het gratis is. Ik vind het een onrealistisch idee dat mensen gaan
+                    zelfstandig betalen voor content die ze lezen. Het is een goed idee om mensen te laten betalen voor
+                    content die ze waarderen maar ik vind het moeilijk te geloven dat dit op grote schaal zal gebeuren.
+                </p>
+
+                <p>
+                    Omdat het wel een interessant idee en onderwerp is, vond ik het wel interessant om naar te
+                    luisteren, maar ik denk niet dat het een succes zal worden.
+                </p>
+            </div>
+
             <nav class="nextPrevious"></nav>
         </section>
     </main>
@@ -102,6 +116,10 @@
             2025 <a href="https://github.com/tymoNL">Tymo Smids</a> Alle rechten voorbehouden
         </p>
     </footer>
+
+        <button id="toggleAnimationsBtn"><i class="fa-solid fa-head-side-cough"></i></button>
+
+    <div class="animationsInfo">Animations <span id="animationStatus">Enabled</span></div>
 </body>
 
 </html>
