--- a/pages/weekly_nerd-3.html
+++ b/pages/weekly_nerd-3.html
@@ -62,16 +62,19 @@
                     <li>Verbeteren</li>
                 </ol>
                 </p>
+            </div>
 
-                <h4>Storage</h4>
+            <div class="detailOpinion">
+                <h3>Mijn mening</h3>
                 <p>
-                <ul>
-                    <li>Cookies</li>
-                    <li>Local storage</li>
-                    <li>Session storage</li>
-                    <li>IndexDB</li>
-                    <li>Cache API</li>
-                </ul>
+                    Ik vind dat Gsap een goede mogelijkheid is om animaties te maken. Maar ik vind ook dat het een
+                    beetje overbodig begint te worden. Dit omdat native CSS animaties steeds beter worden en ook steeds
+                    meer mogelijkheden bieden. Ook heb ik van docenten gehoord dat Gsap niet heel nodig meer is.
+                </p>
+
+                <p>
+                    De weekly nerd was ook meer als een pitch van het product dan uitleg over het product. Daarom vond
+                    ik deze weekly nerd minder interessant dan andere.
                 </p>
             </div>
 
@@ -85,6 +88,10 @@
             2025 <a href="https://github.com/tymoNL">Tymo Smids</a> Alle rechten voorbehouden
         </p>
     </footer>
+
+        <button id="toggleAnimationsBtn"><i class="fa-solid fa-head-side-cough"></i></button>
+
+    <div class="animationsInfo">Animations <span id="animationStatus">Enabled</span></div>
 </body>
 
 </html>
