--- a/pages/weekly_nerd-4.html
+++ b/pages/weekly_nerd-4.html
@@ -35,36 +35,49 @@
     <main class="container">
         <section class="details">
 
-        <nav class="breadcrumbs"></nav>
+            <nav class="breadcrumbs"></nav>
 
-        <div class="detailsImage"></div>
+            <div class="detailsImage"></div>
 
-        <div class="detailHeader"></div>
+            <div class="detailHeader"></div>
 
             <div class="detailsInfo">
                 <h3>Info</h3>
 
                 <h4>Imperative programming</h4>
                 <p>
-                    <ol>
-                        <li>maak array van items</li>
-                        <li>Loop door elk item heen</li>
-                    </ol>
+                <ol>
+                    <li>maak array van items</li>
+                    <li>Loop door elk item heen</li>
+                </ol>
                 </p>
 
                 <h4>Declarative programming</h4>
                 <p>
-                    <ul>
-                        <li>Gestructureerd</li>
-                        <li>Query</li>
-                        <li>Language</li>
-                    </ul>
+                <ul>
+                    <li>Gestructureerd</li>
+                    <li>Query</li>
+                    <li>Language</li>
+                </ul>
 
-                    Selecteer items van table waar conditie waar is.
+                Selecteer items van table waar conditie waar is.
                 </p>
 
                 <h4>Imperative of Declarative programmeren</h4>
                 <p>Dat ligt eraan...</p>
+            </div>
+
+            <div class="detailOpinion">
+                <h3>Mijn mening</h3>
+                <p>
+                    Ik vind het verhaal over declarative en imperative programmeren interessant. Zelf werk ik meer in een imperative werkomgeving.
+                    Maar ik vind het wel interessant om te zien hoe declarative programmeren werkt en wat de voordelen zijn.
+                </p>
+
+                <p>
+                    Wat ik minder vond was dat het verhaal steeds weer terug ging zonder duidelijk antwoord te geven op de vraag
+                    "Wat is beter?". Ik vind dat er meer duidelijkheid had mogen zijn over de vraag.
+                </p>
             </div>
 
             <nav class="nextPrevious"></nav>
@@ -77,6 +90,10 @@
             2025 <a href="https://github.com/tymoNL">Tymo Smids</a> Alle rechten voorbehouden
         </p>
     </footer>
+
+        <button id="toggleAnimationsBtn"><i class="fa-solid fa-head-side-cough"></i></button>
+
+    <div class="animationsInfo">Animations <span id="animationStatus">Enabled</span></div>
 </body>
 
 </html>
