--- a/pages/weekly_nerd-5.html
+++ b/pages/weekly_nerd-5.html
@@ -35,11 +35,11 @@
     <main class="container">
         <section class="details">
 
-        <nav class="breadcrumbs"></nav>
+            <nav class="breadcrumbs"></nav>
 
-        <div class="detailsImage"></div>
+            <div class="detailsImage"></div>
 
-        <div class="detailHeader"></div>
+            <div class="detailHeader"></div>
 
             <div class="detailsInfo">
                 <h3>Info</h3>
@@ -108,6 +108,20 @@
                 </p>
             </div>
 
+            <div class="detailOpinion">
+                <h3>Mijn mening</h3>
+                <p>
+                    Ik vond het best cool hoe Rosa dingen kon maken van oude spullen. Het idee van het Repair Café
+                    vind ik ook goed. Het is goed dat mensen leren hoe ze hun spullen kunnen repareren / hacken.
+                </p>
+
+                <p>
+                    De nerd zelf vond ik minder interessant. Het was meer een verhaal over hoe ze dingen maakt en
+                    hoe ze het Repair Café organiseert. Ik denk dat ik daar nooit in aanraking kom dus het
+                    interesseerde me niet zo veel. Maar het idee van het Repair Café vind ik wel goed.
+                </p>
+            </div>
+
             <nav class="nextPrevious"></nav>
         </section>
     </main>
@@ -118,6 +132,10 @@
             2025 <a href="https://github.com/tymoNL">Tymo Smids</a> Alle rechten voorbehouden
         </p>
     </footer>
+
+        <button id="toggleAnimationsBtn"><i class="fa-solid fa-head-side-cough"></i></button>
+
+    <div class="animationsInfo">Animations <span id="animationStatus">Enabled</span></div>
 </body>
 
 </html>
