--- a/pages/weekly_nerd-6.html
+++ b/pages/weekly_nerd-6.html
@@ -35,11 +35,11 @@
     <main class="container">
         <section class="details">
 
-        <nav class="breadcrumbs"></nav>
+            <nav class="breadcrumbs"></nav>
 
-        <div class="detailsImage"></div>
+            <div class="detailsImage"></div>
 
-        <div class="detailHeader"></div>
+            <div class="detailHeader"></div>
 
             <div class="detailsInfo">
                 <h3>Info</h3>
@@ -54,7 +54,8 @@
                     maar je kunt de taal van de printers nog niet direct spreken.
                 </p>
                 <p>
-                    Ook liet hij zien hoe je een afbeelding op een bon kunt maken, met behulp van het Atkinson-algoritme,
+                    Ook liet hij zien hoe je een afbeelding op een bon kunt maken, met behulp van het
+                    Atkinson-algoritme,
                     dat bedacht is door de maker van QuickDraw, MacPaint en HyperCard. Hij gebruikte verschillende
                     soorten bonprinters, zoals een receipt printer encoder, een web serial receipt printer en een web
                     Bluetooth receipt printer. Dit zijn oude apparaten, daarom werkt hij met web serial.
@@ -64,6 +65,18 @@
                     automatisch ingevoerd. Dit heet een Global Trade Item Number (GTIN). Hij vertelde ook dat je met een
                     camera kunt scannen, via een QR-code. Dit is een 2D-barcode die je met je camera kunt lezen.
                     Uiteindelijk kunnen QR-codes veel van de oude systemen vervangen.
+                </p>
+            </div>
+
+            <div class="detailOpinion">
+                <h3>Mijn mening</h3>
+                <p>
+                    Ik vond het verhaal over het kassasysteem en dat alles was verbonden aan elkaar erg interessant.
+                    Het was leuk om te zien hoe je met webtechnologie een kassasysteem kunt maken.
+                </p>
+                <p>
+                    Wat ik minder vond was de uitleg over de printers en de barcode scanner. Dit was voor mij
+                    niet heel interessant, omdat ik nooit met printers en barcode scanners werk, Dus dit verhaal deed mij niet veel. 
                 </p>
             </div>
 
@@ -77,6 +90,10 @@
             2025 <a href="https://github.com/tymoNL">Tymo Smids</a> Alle rechten voorbehouden
         </p>
     </footer>
+
+        <button id="toggleAnimationsBtn"><i class="fa-solid fa-head-side-cough"></i></button>
+
+    <div class="animationsInfo">Animations <span id="animationStatus">Enabled</span></div>
 </body>
 
 </html>
