--- a/pages/weekly_nerd-7.html
+++ b/pages/weekly_nerd-7.html
@@ -35,42 +35,62 @@
     <main class="container">
         <section class="details">
 
-        <nav class="breadcrumbs"></nav>
+            <nav class="breadcrumbs"></nav>
 
-        <div class="detailsImage"></div>
+            <div class="detailsImage"></div>
 
-        <div class="detailHeader"></div>
+            <div class="detailHeader"></div>
 
             <div class="detailsInfo">
                 <h3>Inclusive design & accessibility</h3>
-                
+
                 <h4>Wat is accessibility?</h4>
                 <p>
-                    Accessibility is het toegankelijk maken van een website voor iedereen. 
-                    Dit houdt in dat de website ook goed te gebruiken is voor mensen met een beperking. 
-                    Dit kan zijn een visuele beperking, motorische beperking of een auditieve beperking. 
-                    Het is belangrijk dat de website ook goed te gebruiken is voor deze mensen, 
-                    zodat zij ook gebruik kunnen maken van de website. 
-                    Dit kan door bijvoorbeeld goede contrasten te gebruiken, 
+                    Accessibility is het toegankelijk maken van een website voor iedereen.
+                    Dit houdt in dat de website ook goed te gebruiken is voor mensen met een beperking.
+                    Dit kan zijn een visuele beperking, motorische beperking of een auditieve beperking.
+                    Het is belangrijk dat de website ook goed te gebruiken is voor deze mensen,
+                    zodat zij ook gebruik kunnen maken van de website.
+                    Dit kan door bijvoorbeeld goede contrasten te gebruiken,
                     goede alt-teksten te gebruiken en de website goed te laten werken met een toetsenbord.
                 </p>
 
                 <h4>Keyboard testing</h4>
                 <p>
-                    Keyboard testing is het testen van de website met alleen een toetsenbord. 
-                    Dit houdt in dat je de website moet kunnen gebruiken zonder een muis. 
-                    Dit is belangrijk omdat niet iedereen een muis kan gebruiken. 
-                    Dit kan zijn door een motorische beperking of omdat iemand gewoon geen muis heeft. 
+                    Keyboard testing is het testen van de website met alleen een toetsenbord.
+                    Dit houdt in dat je de website moet kunnen gebruiken zonder een muis.
+                    Dit is belangrijk omdat niet iedereen een muis kan gebruiken.
+                    Dit kan zijn door een motorische beperking of omdat iemand gewoon geen muis heeft.
                     Het is belangrijk dat de website ook goed te gebruiken is met alleen een toetsenbord.
                 </p>
 
                 <h4>Contrast</h4>
                 <p>
-                    Contrast is het verschil tussen de achtergrondkleur en de tekstkleur. 
-                    Dit is belangrijk omdat het ervoor zorgt dat de tekst goed leesbaar is. 
-                    Dit is belangrijk voor mensen met een visuele beperking, 
-                    maar ook voor mensen die gewoon moeite hebben met lezen. 
+                    Contrast is het verschil tussen de achtergrondkleur en de tekstkleur.
+                    Dit is belangrijk omdat het ervoor zorgt dat de tekst goed leesbaar is.
+                    Dit is belangrijk voor mensen met een visuele beperking,
+                    maar ook voor mensen die gewoon moeite hebben met lezen.
                     Het is belangrijk dat de tekst goed leesbaar is, zodat iedereen de website kan gebruiken.
+                </p>
+            </div>
+
+            <div class="detailOpinion">
+                <h3>Mijn mening</h3>
+                <p>
+                    Ik vond het verhaal over accessibility en inclusive design erg interessant.
+                    Het is belangrijk dat iedereen de website kan gebruiken, ook mensen met een beperking.
+                </p>
+
+                <p>
+                    Ik vond ook dat het verhaal heel erg basis was, wat niet erg is maar ik had wel meer verwacht van de
+                    uitleg.
+                    Het was meer een uitleg over wat accessibility is en hoe je het kunt toepassen, maar niet echt een
+                    diepere uitleg over hoe je het kunt toepassen in de praktijk.
+                </p>
+
+                <p>
+                    We hadden een vak HCD en daar kwamen we erachter dat de basis van accessibility en inclusive design niet altijd goed werkt.
+                    Wat er ook verteld werd wist iedereen in de klas hierom dus ook al en was er niet echt iets nieuw.
                 </p>
             </div>
 
@@ -84,6 +104,10 @@
             2025 <a href="https://github.com/tymoNL">Tymo Smids</a> Alle rechten voorbehouden
         </p>
     </footer>
+
+        <button id="toggleAnimationsBtn"><i class="fa-solid fa-head-side-cough"></i></button>
+
+    <div class="animationsInfo">Animations <span id="animationStatus">Enabled</span></div>
 </body>
 
 </html>
