--- a/pages/weekly_nerd-8.html
+++ b/pages/weekly_nerd-8.html
@@ -60,6 +60,20 @@
                 </p>
             </div>
 
+            <div class="detailOpinion">
+                <h3>Mijn mening</h3>
+                <p>
+                    Ik vond het heel interessant om te horen hoe Nienke haar onderzoek heeft gedaan en wat ze heeft geleerd.
+                    Ook vond ik het heel vet dat ze voor de GVB is gaan werken om hen te helpen met het verbeteren van de
+                    toegankelijkheid van hun app.
+                </p>
+
+                <p>
+                    Dit verhaal vond ik ook interessanter omdat het kwam van iemand die zelf ook deze minor heeft gevolgd.
+                    Hierom vond ik deze weekly nerd leuker dan de vorige.
+                </p>
+            </div>
+
             <nav class="nextPrevious"></nav>
         </section>
     </main>
@@ -70,6 +84,10 @@
             2025 <a href="https://github.com/tymoNL">Tymo Smids</a> Alle rechten voorbehouden
         </p>
     </footer>
+
+        <button id="toggleAnimationsBtn"><i class="fa-solid fa-head-side-cough"></i></button>
+
+    <div class="animationsInfo">Animations <span id="animationStatus">Enabled</span></div>
 </body>
 
 </html>
