--- a/pages/weekly_nerd-9.html
+++ b/pages/weekly_nerd-9.html
@@ -55,6 +55,10 @@
             2025 <a href="https://github.com/tymoNL">Tymo Smids</a> Alle rechten voorbehouden
         </p>
     </footer>
+
+        <button id="toggleAnimationsBtn"><i class="fa-solid fa-head-side-cough"></i></button>
+
+    <div class="animationsInfo">Animations <span id="animationStatus">Enabled</span></div>
 </body>
 
 </html>
